--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -61,7 +61,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QLineEdit" name="txtInsert">
+       <widget class="QLineEdit" name="textInputField">
         <property name="alignment">
          <set>Qt::AlignmentFlag::AlignCenter</set>
         </property>
