--- a/profilenamedialog.ui
+++ b/profilenamedialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>profileDialog</class>
- <widget class="QDialog" name="profileDialog">
+ <class>profileNameDialog</class>
+ <widget class="QDialog" name="profileNameDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
