--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -16,9 +16,44 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout" stretch="1,10">
     <item>
-     <layout class="QHBoxLayout" name="layoutAtTop" stretch="1,1,1,1,20,1,1,1,1,1">
+     <layout class="QHBoxLayout" name="layoutAtTop" stretch="0,1,0,1,1,1,20,1,1,1,1,1">
       <item>
        <spacer name="hSpace1">
+        <property name="orientation">
+         <enum>Qt::Orientation::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="buttonInfo">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; text-decoration: underline;&quot;&gt;CONTROLS:&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;[p]&lt;/span&gt; open profile menu (add/delete profile &amp;amp; edit profile names)&lt;br/&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;[↑ ↓ ← →]&lt;/span&gt; move button selection cursor&lt;span style=&quot; font-weight:700;&quot;&gt;&lt;br/&gt;[c]&lt;/span&gt; copy content into clipboard&lt;br/&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;[v]&lt;/span&gt; paste content from clipboard&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;[+]&lt;/span&gt; add a new (empty) button to the grid&lt;br/&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;[-]&lt;/span&gt; delete &lt;span style=&quot; font-weight:700;&quot;&gt;ALL&lt;/span&gt; buttons that are currently marked for deletion (red)&lt;br/&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;[CTRL/Shift &amp;amp; -]&lt;/span&gt; (un)mark the currently selected button for deletion&lt;br/&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;[Backspace/Delete]&lt;/span&gt; delete the currently selected button&lt;br/&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;[Return/Enter]&lt;/span&gt; open edit dialog for currently selected button&lt;br/&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;[CTRL/Shift &amp;amp; Enter/Return]&lt;/span&gt; open context / right-click menu (add title, ...)&lt;br/&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;[ESC]&lt;/span&gt; reset selection &amp;amp; all deletion-marks&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton { border: none; }</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset theme="QIcon::ThemeIcon::DialogInformation"/>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>20</width>
+          <height>20</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="hSpace2">
         <property name="orientation">
          <enum>Qt::Orientation::Horizontal</enum>
         </property>
@@ -45,7 +80,7 @@
        </widget>
       </item>
       <item>
-       <spacer name="hSpace2">
+       <spacer name="hSpace3">
         <property name="orientation">
          <enum>Qt::Orientation::Horizontal</enum>
         </property>
@@ -97,7 +132,7 @@
        </widget>
       </item>
       <item>
-       <spacer name="hSpace3">
+       <spacer name="hSpace5">
         <property name="orientation">
          <enum>Qt::Orientation::Horizontal</enum>
         </property>
@@ -120,7 +155,7 @@
        </widget>
       </item>
       <item>
-       <spacer name="hSpace5">
+       <spacer name="hSpace6">
         <property name="orientation">
          <enum>Qt::Orientation::Horizontal</enum>
         </property>
